Swap list getters to use sequenced collection methods